@@ -17,14 +17,14 @@ Bugtracker:  http://www.biggeruniverse.com/projects/flyspray/
 -----------------
 
 - Multilayer, layers can be changed around dynamically
-- Multiple orientations (orthographic and isometric at the moment)
+- Multiple orientations (orthographic, isometric, and hexagonal at the moment)
 - Tiles can be taller than the default tile height
 - Easy to use drawing operations
 - Universal XML-based map and tileset file formats
 - Can embed tiles in the map or tileset file
 - Highly portable and free software
 - Maps may include tiles from multiple tilesets
-
+- Ability to write custom Map reader/writer plugins
 
 ---------
  AUTHORS
@@ -38,8 +38,11 @@ Bugtracker:  http://www.biggeruniverse.com/projects/flyspray/
  THANKS TO
 -----------
 
+(In no particular order)
 - Frode Lindeijer for the design of the logo
 - Eean Cook for various contributions
+- Andreas Mross for Hexagonal map implementation
+- Ahmed Mohombe for many good suggestions and notes on implementation
 - Rickard Isaksson for an improved image loader
 - Kevin Kelley for the base64 encoder/decoder we use
 - GNOME and GIMP for their magnificent icons
