@@ -775,8 +775,8 @@ public class MapEditor implements ActionListener,
                     break;
 				case PS_MARQUEE:
 					if(marqueeSelection != null) {
-						for (int y = Math.min(mouseInitialPressLocation.y,tile.y); y < Math.max(mouseInitialPressLocation.y,tile.y); y++) {
-								for (int x = Math.min(mouseInitialPressLocation.x,tile.x); x < Math.max(mouseInitialPressLocation.x,tile.x); x++) {
+						for (int y = Math.min(mouseInitialPressLocation.y,tile.y); y <= Math.max(mouseInitialPressLocation.y,tile.y); y++) {
+								for (int x = Math.min(mouseInitialPressLocation.x,tile.x); x <= Math.max(mouseInitialPressLocation.x,tile.x); x++) {
 										marqueeSelection.select(x,y);
 								}
 						}
@@ -1243,31 +1243,46 @@ public class MapEditor implements ActionListener,
             Tile newTile, Tile oldTile) {
         if (newTile == oldTile) return;
 
-        Rectangle area = new Rectangle(new Point(x, y));
-        Stack stack = new Stack();
-        MapLayer before = new MapLayer(layer);
-        MapLayer after;
+        Rectangle area = null;
+		MapLayer before = new MapLayer(layer);
+		MapLayer after;
 
-        stack.push(new Point(x, y));
-        while (!stack.empty()) {
-            // Remove the next tile from the stack
-            Point p = (Point)stack.pop();
-
-            // If the tile it meets the requirements, set it and push its
-            // neighbouring tiles on the stack.
-            if (currentMap.inBounds(p.x, p.y) &&
-                    layer.getTileAt(p.x, p.y) == oldTile)
-            {
-                layer.setTileAt(p.x, p.y, newTile);
-                area.add(p);
-
-                stack.push(new Point(p.x, p.y - 1));
-                stack.push(new Point(p.x, p.y + 1));
-                stack.push(new Point(p.x + 1, p.y));
-                stack.push(new Point(p.x - 1, p.y));
-            }
+        if(marqueeSelection == null) {
+	        area = new Rectangle(new Point(x, y)); 
+	        Stack stack = new Stack();	        
+	
+	        stack.push(new Point(x, y));
+	        while (!stack.empty()) {
+	            // Remove the next tile from the stack
+	            Point p = (Point)stack.pop();
+	
+	            // If the tile it meets the requirements, set it and push its
+	            // neighbouring tiles on the stack.
+	            if (currentMap.inBounds(p.x, p.y) &&
+	                    layer.getTileAt(p.x, p.y) == oldTile)
+	            {
+	                layer.setTileAt(p.x, p.y, newTile);
+	                area.add(p);
+	
+	                stack.push(new Point(p.x, p.y - 1));
+	                stack.push(new Point(p.x, p.y + 1));
+	                stack.push(new Point(p.x + 1, p.y));
+	                stack.push(new Point(p.x - 1, p.y));
+	            }
+	        }
+        } else {
+        	if(marqueeSelection.getSelectedArea().contains(x,y)) {
+        		area = marqueeSelection.getSelectedArea();
+        		for(int i = area.y;i<area.height+area.y;i++) {
+	        		for(int j = area.x;j<area.width+area.x;j++){
+						layer.setTileAt(j, i, newTile);
+	        		}
+        		}
+        	} else {
+        		return;
+        	}
         }
-
+        
         Rectangle bounds = new Rectangle(
                 area.x, area.y, area.width + 1, area.height + 1);
         after = new MapLayer(bounds);
