@@ -12,7 +12,8 @@
 
 package tiled.mapeditor.selection;
 
-import java.awt.Color;
+import java.awt.*;
+import java.util.Stack;
 
 import tiled.core.*;
 
@@ -31,6 +32,35 @@ public class SelectionLayer extends MapLayer {
 		super(w,h);
 		highlightColor = Color.blue;
 		selTile = new Tile();
+	}
+	
+	public Rectangle getSelectedArea() {
+		
+		Point first = locationOf(selTile);
+		
+		Rectangle area = new Rectangle(first); 
+		Stack stack = new Stack();
+
+		stack.push(new Point(first.x, first.y));
+		while (!stack.empty()) {
+			// Remove the next tile from the stack
+			Point p = (Point)stack.pop();
+
+			// If the tile it meets the requirements, set it and push its
+			// neighbouring tiles on the stack.
+			if (contains(p.x, p.y) &&
+					getTileAt(p.x, p.y) == selTile)
+			{
+				area.add(p);
+
+				stack.push(new Point(p.x, p.y - 1));
+				stack.push(new Point(p.x, p.y + 1));
+				stack.push(new Point(p.x + 1, p.y));
+				stack.push(new Point(p.x - 1, p.y));
+			}
+		}
+		
+		return area;
 	}
 	
 	public boolean isSelected(int tx, int ty) {
